# OPT_c

./: .gitignore  README.ch.md  README.md  requirements.txt
develop/: CMakeLists.txt
develop/include/: homo_ocp.h  homo_ocp_linAGB.h
develop/src/: homo_ocp_QPinit.cpp  homo_ocp_core.cpp  homo_ocp_disp.cpp  homo_ocp_fun_handler.cpp  homo_ocp_init.cpp  homo_ocp_linear_algebra.cpp
develop/src/linAGB/: homo_ocp_eigen.cpp  homo_ocp_spral.cpp
develop/test/: homo_ocp_mainTest.cpp  testProb_yourSuffix.cpp  testProb_yourSuffix.h
env_test/: CMakeLists.txt
env_test/src/: env_test.cpp
matlab/: path_profile.m
matlab/example/: QP_prob_gen.m  large_prob_gen.m  opt_test.m  simple_prob_gen.m
matlab/src/: lp_interiorPoint.m  value_space_QP.m
matlab/tools/: casadi_nlpProbGen.m  casadi_qpProbGen.m
